--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,6 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.HeaderPlaceholder::placeholder {
+  background-color: #f9fafb;
+}
